ccut_zzy edit at 20250424